--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,47 +1,56 @@
-      img {
-        width: 350px;
-        border-radius: px;
-        margin-right: 10px;
-        object-fit: cover; /* ??? */
-      }
+img {
+  width: 350px;
+  border-radius: px;
+  margin-right: 10px;
+  object-fit: cover; /* ??? */
+}
 
-      p.tomaketextbold {  /* created a class and used it to bold specific text*/
-        font-weight: bold;
-      }
+p.tomaketextbold {  /* created a class and used it to bold specific text*/
+  font-weight: bold;
+}
 
-      em {
-          color: red;
-          font-style: normal;
-      }
+a {
+  text-decoration: none;
+  color: black;
+  font-size: 1.5em;
+  border: 2x solid black;
+  padding: 5px;
+  background-image: linear-gradient(red, black);
+}
 
-      body {
-        text-align: center;
-      }
+em {
+    color: red;
+    font-style: normal;
+}
 
-      nav {
-        background-color: steelblue;
-        padding: 10px;
-      }
+body {
+  text-align: center;
+}
 
-      a {
-        color: white;
-        margin: 40px;
-      }
+nav {
+  background-color: steelblue;
+  padding: 10px;
+}
 
-      h1 {
-        color: Black;
-      }
-      img {
-        width: 800px;
-        border: 4px solid steelblue;
-      }
-      p {
-        padding: 10px;
-      }
-      footer {
-        background-color: steelblue;
-        color: white;
-      }
+a {
+  color: white;
+  margin: 40px;
+}
 
-    /* NOW WE ADD CSS INSIDE THE HEADER BY CALLING IT STYLE */
-    /* IMG is the property and each property contain a property and a value. */
+h1 {
+  color: Black;
+}
+img {
+  width: 800px;
+  border: 4px solid steelblue;
+}
+p {
+  padding: 10px;
+}
+footer {
+  background-color: steelblue;
+  color: white;
+}
+
+/* NOW WE ADD CSS INSIDE THE HEADER BY CALLING IT STYLE */
+/* IMG is the property and each property contain a property and a value. */
